Replace Arrays.lostOf with List.of